Bug 461595 - Crashes When Two or More Documents are Opened
Summary: Crashes When Two or More Documents are Opened
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Mint (Ubuntu based) Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 461740 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-11-08 15:52 UTC by LaTor
Modified: 2022-11-14 10:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description LaTor 2022-11-08 15:52:51 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

After the Nov 2nd nightly build, any new version of Krita crashes when multiple documents are opened simultaneously.

STEPS TO REPRODUCE
1. Open a .kra document.
2. Open another .kra document without closing the first one.
3. Krita crashes.

OBSERVED RESULT
Krita will crash.

EXPECTED RESULT
Krita should not crash and should open both documents while running smoothly.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Linux Mint 21 Vanessa on KDE Plasma
(available in About System)
KDE Plasma Version: 5.25.5
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
When I check the Krita log, the only dates that I can find saved are from Nov 5 and no crash logs are present as it says that it is working perfectly.

I have also reported this and another bug on Krita Artists at https://krita-artists.org/t/latest-nightly-build-crash/51204.
Comment 1 amyspark 2022-11-08 17:59:00 UTC
Hi, we'd need the backtrace for the crash, or at least two documents that when opened together trigger it.
Comment 2 LaTor 2022-11-09 00:35:30 UTC
I downloaded today's nightly and was able to reproduce the crash. This time; however, Krita created this report, ending with Krita did not close correctly. I hope this helps.

 07 Nov 2022 11:22:38 -0700. Executing /tmp/.mount_krita-PyUrN8/usr/bin/krita

Krita Version: 5.2.0-prealpha (git 4225dad), Qt version compiled: 5.12.12, loaded: 5.12.12. Process ID: 38901
-- -- -- -- -- -- -- --
07 Nov 2022 11:22:38 -0700: Style: fusion. Available styles: Windows, Fusion
07 Nov 2022 11:22:39 -0700: Database is up to date. Version: 0.0.17, created by Krita 5.2.0-prealpha, at Tue Oct 4 14:58:59 2022
07 Nov 2022 11:22:39 -0700: Could not retrieve md5 for resource paintoppresets/RGBANight15.kpp
07 Nov 2022 11:22:39 -0700: Could not retrieve md5 for resource paintoppresets/RGBANight16.kpp
07 Nov 2022 11:22:39 -0700: Could not retrieve md5 for resource paintoppresets/RGBANight17.kpp
07 Nov 2022 11:22:39 -0700: Could not retrieve md5 for resource paintoppresets/RGBANight18.kpp
07 Nov 2022 11:22:39 -0700: Could not retrieve md5 for resource paintoppresets/RGBANight1.kpp
07 Nov 2022 11:22:39 -0700: Could not retrieve md5 for resource paintoppresets/RGBANight2.kpp
07 Nov 2022 11:22:39 -0700: Could not retrieve md5 for resource paintoppresets/RGBANight3.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANight4.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANight5.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANight8.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightBlender15.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightBlender16.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightBlender17.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightBlender18.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightBlender1.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightBlender2.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightBlender3.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightBlender4.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightBlender5.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightBlender8.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightWet15.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightWet16.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightWet17.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightWet18.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightWet1.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightWet2.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightWet3.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightWet4.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightWet5.kpp
07 Nov 2022 11:22:40 -0700: Could not retrieve md5 for resource paintoppresets/RGBANightWet8.kpp
07 Nov 2022 11:22:43 -0700: Could not retrieve md5 for resource paintoppresets/rst) Leather.kpp
07 Nov 2022 11:22:59 -0700: KisAppimageUpdater: update check finished. Result: 0 Exit status: 0
path: /home/snow-white/.local/share/applications/krita-5.2.0-prealpha-4225dada98-x86_64.appimage
output: 
07 Nov 2022 11:23:16 -0700: Importing application/x-krita to application/x-krita. Location: /home/snow-white/All/Main Files/Alieska Projects/Art/Digital Art/Fruit Series/Candy Cane Shepherd/Printify/ArtsAdd - Girl's Sleeveless Sundress Template/Front Bottom.kra. Real location: /home/snow-white/All/Main Files/Alieska Projects/Art/Digital Art/Fruit Series/Candy Cane Shepherd/Printify/ArtsAdd - Girl's Sleeveless Sundress Template/Front Bottom.kra. Batchmode: 0
07 Nov 2022 11:23:29 -0700: Loaded image from application/x-krita. Size: 5459 * 3029 pixels, 2.08333 dpi. Color model: 8-bit integer/channel RGB/Alpha (sRGB IEC61966-2.1). Layers: 927
07 Nov 2022 11:23:44 -0700: Importing application/x-krita to application/x-krita. Location: /home/snow-white/All/Main Files/Alieska Projects/Art/Digital Art/Fruit Series/Candy Cane Shepherd/Candy Cane Shepherd.kra. Real location: /home/snow-white/All/Main Files/Alieska Projects/Art/Digital Art/Fruit Series/Candy Cane Shepherd/Candy Cane Shepherd.kra. Batchmode: 0

KRITA DID NOT CLOSE CORRECTLY
================================================================================
Comment 3 Bug Janitor Service 2022-11-09 05:12:29 UTC
Thanks for your comment!

Automatically switching the status of this bug to REPORTED so that the KDE team
knows that the bug is ready to get confirmed.

In the future you may also do this yourself when providing needed information.
Comment 4 amyspark 2022-11-11 11:28:22 UTC
Sorry, we still need

- the two documents which together cause the crash
- alternatively, the backtrace as explained in https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
Comment 5 amyspark 2022-11-12 19:02:38 UTC
*** Bug 461740 has been marked as a duplicate of this bug. ***
Comment 6 amyspark 2022-11-12 19:03:04 UTC
Stacktrace from Halla on 461740:

Thread 0 Crashed::  Dispatch queue: com.apple.main-thread
0   libsystem_kernel.dylib        	       0x1b2b3b224 __pthread_kill + 8
1   libsystem_pthread.dylib       	       0x1b2b71cec pthread_kill + 288
2   libsystem_c.dylib             	       0x1b2aab2c8 abort + 180
3   QtCore                        	       0x1056d3d68 0x1056bc000 + 97640
4   QtCore                        	       0x105993260 QMessageLogger::fatal(char const*, ...) const + 116
5   libkritaglobal.19.0.0.dylib   	       0x10142d8d8 kis_assert_common(char const*, char const*, int, bool, bool) + 1368 (kis_assert.cpp:89)
6   libkritaimage.19.0.0.dylib    	       0x102911dd0 KisLayer::colorSpace() const + 76 (kis_layer.cc:229)
7   libkritaimage.19.0.0.dylib    	       0x1028fb5e8 KisImage::assignImageProfile(KoColorProfile const*, bool)::$_6::operator()(KisSharedPtr<KisNode>) const + 16 (kis_image.cc:1420) [inlined]
8   libkritaimage.19.0.0.dylib    	       0x1028fb5e8 decltype(static_cast<KisImage::assignImageProfile(KoColorProfile const*, bool)::$_6&>(fp)(static_cast<KisSharedPtr<KisNode>>(fp0))) std::__1::__invoke<KisImage::assignImageProfile(KoColorProfile const*, bool)::$_6&, KisSharedPtr<KisNode> >(KisImage::assignImageProfile(KoColorProfile const*, bool)::$_6&, KisSharedPtr<KisNode>&&) + 36 (type_traits:3918) [inlined]
9   libkritaimage.19.0.0.dylib    	       0x1028fb5e8 bool std::__1::__invoke_void_return_wrapper<bool, false>::__call<KisImage::assignImageProfile(KoColorProfile const*, bool)::$_6&, KisSharedPtr<KisNode> >(KisImage::assignImageProfile(KoColorProfile const*, bool)::$_6&, KisSharedPtr<KisNode>&&) + 36 (invoke.h:30) [inlined]
10  libkritaimage.19.0.0.dylib    	       0x1028fb5e8 std::__1::__function::__alloc_func<KisImage::assignImageProfile(KoColorProfile const*, bool)::$_6, std::__1::allocator<KisImage::assignImageProfile(KoColorProfile const*, bool)::$_6>, bool (KisSharedPtr<KisNode>)>::operator()(KisSharedPtr<KisNode>&&) + 36 (function.h:178) [inlined]
11  libkritaimage.19.0.0.dylib    	       0x1028fb5e8 std::__1::__function::__func<KisImage::assignImageProfile(KoColorProfile const*, bool)::$_6, std::__1::allocator<KisImage::assignImageProfile(KoColorProfile const*, bool)::$_6>, bool (KisSharedPtr<KisNode>)>::operator()(KisSharedPtr<KisNode>&&) + 52 (function.h:352)
12  libkritaimage.19.0.0.dylib    	       0x10292aad0 std::__1::__function::__value_func<bool (KisSharedPtr<KisNode>)>::operator()(KisSharedPtr<KisNode>&&) const + 24 (function.h:505) [inlined]
13  libkritaimage.19.0.0.dylib    	       0x10292aad0 std::__1::function<bool (KisSharedPtr<KisNode>)>::operator()(KisSharedPtr<KisNode>) const + 24 (function.h:1182) [inlined]
14  libkritaimage.19.0.0.dylib    	       0x10292aad0 KisLayerUtils::recursiveFindNode(KisSharedPtr<KisNode>, std::__1::function<bool (KisSharedPtr<KisNode>)>) + 100 (kis_layer_utils.cpp:1977)
15  libkritaimage.19.0.0.dylib    	       0x10292ac14 KisLayerUtils::recursiveFindNode(KisSharedPtr<KisNode>, std::__1::function<bool (KisSharedPtr<KisNode>)>) + 424 (kis_layer_utils.cpp:1983)
16  libkritaimage.19.0.0.dylib    	       0x1028ef048 KisImage::assignImageProfile(KoColorProfile const*, bool) + 168 (kis_image.cc:1418)
17  libkritalibkra.19.0.0.dylib   	       0x10f3fcd9c KisKraLoader::loadBinaryData(KoStore*, KisSharedPtr<KisImage>, QString const&, bool) + 680 (kis_kra_loader.cpp:427)
18  libkritalibkra.19.0.0.dylib   	       0x10f442d40 KraConverter::completeLoading(KoStore*) + 804 (kra_converter.cpp:431)
19  libkritalibkra.19.0.0.dylib   	       0x10f441030 KraConverter::buildImage(QIODevice*) + 840 (kra_converter.cpp:105)
20  kritakraimport.so             	       0x10f3129e0 KraImport::convert(KisDocument*, QIODevice*, KisPinnedSharedPtr<KisPropertiesConfiguration>) + 64 (kra_import.cpp:30)
21  libkritaui.19.0.0.dylib       	       0x101e985c0 KisImportExportManager::doImport(QString const&, QSharedPointer<KisImportExportFilter>) + 124 (KisImportExportManager.cpp:667)
22  libkritaui.19.0.0.dylib       	       0x101e93950 KisImportExportManager::convert(KisImportExportManager::Direction, QString const&, QString const&, QString const&, bool, KisPinnedSharedPtr<KisPropertiesConfiguration>, bool, bool) + 2644 (KisImportExportManager.cpp:376)
23  libkritaui.19.0.0.dylib       	       0x101e92d90 KisImportExportManager::importDocument(QString const&, QString const&) + 64 (KisImportExportManager.cpp:131)
24  libkritaui.19.0.0.dylib       	       0x101e82e50 KisDocument::openFile() + 1640 (KisDocument.cpp:1874)
25  libkritaui.19.0.0.dylib       	       0x101e826b8 KisDocument::openPathInternal(QString const&) + 516 (KisDocument.cpp:2414)
26  libkritaui.19.0.0.dylib       	       0x101e81f90 KisDocument::openPath(QString const&, QFlags<KisDocument::OpenFlag>) + 1120 (KisDocument.cpp:1810)
27  libkritaui.19.0.0.dylib       	       0x101eae7e4 KisMainWindow::openDocumentInternal(QString const&, QFlags<KisMainWindow::OpenFlag>) + 216 (KisMainWindow.cpp:1104)
28  libkritaui.19.0.0.dylib       	       0x101eae4b0 KisMainWindow::openDocument(QString const&, QFlags<KisMainWindow::OpenFlag>) + 120 (KisMainWindow.cpp:1078)
29  libkritaui.19.0.0.dylib       	       0x101eb4704 KisMainWindow::slotFileOpen(bool) + 396 (KisMainWindow.cpp:1725)
30  QtCore                        	       0x1058bd5bc QMetaObject::activate(QObject*, int, int, void**) + 2396
31  QtWidgets                     	       0x103ec4630 QAction::activate(QAction::ActionEvent) + 304
32  QtWidgets                     	       0x103f9f668 0x103ebc000 + 931432
33  QtWidgets                     	       0x103fa0640 QAbstractButton::mouseReleaseEvent(QMouseEvent*) + 256
34  QtWidgets                     	       0x10408b058 QToolButton::mouseReleaseEvent(QMouseEvent*) + 20
35  QtWidgets                     	       0x103f03f64 QWidget::event(QEvent*) + 128
36  QtWidgets                     	       0x10408b5a0 QToolButton::event(QEvent*) + 296
37  QtWidgets                     	       0x103ecdbe0 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 292
38  QtWidgets                     	       0x103ed04f0 QApplication::notify(QObject*, QEvent*) + 6032
39  libkritaui.19.0.0.dylib       	       0x101e69c30 KisApplication::notify(QObject*, QEvent*) + 332 (KisApplication.cpp:757)
40  QtCore                        	       0x10588d3b8 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 288
41  QtWidgets                     	       0x103ece54c QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) + 976
42  QtWidgets                     	       0x103f22590 0x103ebc000 + 419216
43  QtWidgets                     	       0x103f214f0 0x103ebc000 + 414960
44  QtWidgets                     	       0x103ecdbe0 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 292
45  QtWidgets                     	       0x103ecef84 QApplication::notify(QObject*, QEvent*) + 548
46  libkritaui.19.0.0.dylib       	       0x101e69c30 KisApplication::notify(QObject*, QEvent*) + 332 (KisApplication.cpp:757)
47  QtCore                        	       0x10588d3b8 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 288
48  QtGui                         	       0x104c658f8 QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) + 2992
49  QtGui                         	       0x104c69100 QGuiApplicationPrivate::processTabletEvent(QWindowSystemInterfacePrivate::TabletEvent*) + 1224
50  QtGui                         	       0x104c4cfe4 QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 248
51  libqcocoa.dylib               	       0x107ba4fa8 0x107b70000 + 217000
52  CoreFoundation                	       0x1b2c51a34 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28
53  CoreFoundation                	       0x1b2c519c8 __CFRunLoopDoSource0 + 176
54  CoreFoundation                	       0x1b2c51738 __CFRunLoopDoSources0 + 244
55  CoreFoundation                	       0x1b2c5033c __CFRunLoopRun + 836
56  CoreFoundation                	       0x1b2c4f8a4 CFRunLoopRunSpecific + 612
57  HIToolbox                     	       0x1bc2c33bc RunCurrentEventLoopInMode + 292
58  HIToolbox                     	       0x1bc2c304c ReceiveNextEventCommon + 236
59  HIToolbox                     	       0x1bc2c2f48 _BlockUntilNextEventMatchingListInModeWithFilter + 72
60  AppKit                        	       0x1b5ea8630 _DPSNextEvent + 632
61  AppKit                        	       0x1b5ea77c0 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 728
62  AppKit                        	       0x1b5e9bbf0 -[NSApplication run] + 464
63  libqcocoa.dylib               	       0x107ba3df0 0x107b70000 + 212464
64  QtCore                        	       0x105888c24 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 524
65  QtCore                        	       0x10588da78 QCoreApplication::exec() + 128
66  krita                         	       0x1005c3a10 main + 10564 (main.cc:727)
67  dyld                          	       0x1b2847e50 start + 2544
Comment 7 Dmitry Kazakov 2022-11-14 10:49:00 UTC
Git commit c541883481e2106327682b154c64b177076f93ff by Dmitry Kazakov.
Committed on 14/11/2022 at 10:48.
Pushed by dkazakov into branch 'master'.

Fix a crash caused by non-availability of the paint device for the references layer

M  +10   -2    libs/ui/flake/KisReferenceImagesLayer.cpp
M  +1    -3    libs/ui/flake/kis_shape_layer.cc
M  +2    -1    libs/ui/flake/kis_shape_layer_canvas.h

https://invent.kde.org/graphics/krita/commit/c541883481e2106327682b154c64b177076f93ff