Fix a crash caused by non-availability of the paint device for the references layer

BUG:461595